# needybot-msgs

./: CMakeLists.txt  README.md  package.xml
action/: Animator.action  Speech.action
msg/: Altitude.msg  Base64Image.msg  Date.msg  Path.msg  UIResponse.msg
